DPRO-2081 - [Figure Lightbox] - Fix - Zoom slider misaligned in Edge

--- a/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article-lightbox.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article-lightbox.scss
@@ -235,6 +235,7 @@ $lb-footer-height: $lb-control-bar-height + $lb-description-bar-height + $lb-hea
         position: relative;
         width: 60%;
         padding: 0 rem-calc(27);
+        text-align: left;
 
         @media #{$large-up} {
           width: 33%;
